--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   background-image: url(./img/backgraund-body.png);
   background-repeat: no-repeat;
   background-size: cover;
+  font-family: "Inter", sans-serif;
 }
 a {
   text-decoration: none;
@@ -18,4 +19,36 @@ li {
   width: 100%;
   max-width: 1180px;
   margin: auto;
+}
+.header {
+  border-radius: 20px;
+  border: solid 0.4px #fff;
+  display: flex;
+  justify-content: space-between;
+  justify-items: center;
+  padding: 10px 0;
+  margin-top: 42px;
+  background-color: #242B21;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  height: 60px;
+  opacity: 0.5;
+}
+.header-logo img{
+  width: 150px;
+}
+.header-nav ul {
+ display: flex;
+ gap: 50px;
+ padding: 10px 0;
+}
+.header-nav ul li a {
+  color: #FFF;
+  font-size: 14px;
+  font-weight: 400;
+}
+.header-buscar {
+  display: flex;
+  gap: 50px;
+  height: 40px;
+  padding: 12px 60px;
 }
