--- a/style.css
+++ b/style.css
@@ -167,3 +167,108 @@ li {
   top: 550px;
   padding: 6px 24px;
 }
+
+/*Sectio-Plantas*/
+.section-plantas {
+  margin-top: 100px;
+}
+.section-plantas-adereco h2 {
+  color: #FFF;
+  font-size: 36px;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+}
+.section-plantas-img1 {
+  display: block;
+  margin: -60px 720px;
+}
+.section-plantas-img2 {
+  display: block;
+  margin: -56px 470px;
+}
+.section-plantas-card {
+  margin-top: 130px;
+}
+.section-plantas-card1 img {
+  display: block;
+  margin: 0 auto;
+  width: 800px;
+}
+.section-plantas-card1 {
+  position: relative;
+}
+.section-plantas-card1 h3 {
+  color: #FFF;
+  font-size: 24px;
+  font-weight: 500;
+  margin-top: -220px;
+  margin-left: 600px;
+}
+.section-plantas-card1 p {
+  color: #FFF;
+  font-size: 12px;
+  font-weight: 500;
+  margin-top: 14px;
+  margin-bottom: 14px;
+  margin-left: 600px;
+}
+.section-plantas-card1 strong {
+  color: #FFF;
+  font-size: 20px;
+  font-weight: 500;
+  margin-left: 600px;
+}
+.section-plantas-card1 button {
+  color: #FFF;
+  font-size: 20px;
+  font-weight: 500;
+  margin-left: 600px;
+  margin-top: 14px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  border: solid 1px #FFF;
+  border-radius: 8px;
+  background-color: transparent;
+  padding: 6px 20px;
+}
+.section-plantas-card1 button img {
+  width: 14px;
+}
+.section-plantas-card-rose {
+  position: absolute;
+  max-width:380px;
+  max-height:400px;
+  top: -140px;
+  left: 160px;
+}
+.section-plantas-card-feminine {
+  position: absolute;
+  max-width:380px;
+  max-height:400px;
+  top: -60px;
+  left: 160px;
+}
+.section-plantas-card1-info img {
+  width: 100%;
+  width: 10px;
+}
+.section-plantas-adereco2 {
+  margin-top: 240px;
+}
+.section-plantas-adereco2 h2 {
+  color: #FFF;
+  font-size: 36px;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+}
+.section-plantas-img1-2 {
+  display: block;
+  margin: -60px 720px;
+}
+.section-plantas-img2-2 {
+  display: block;
+  margin: -56px 470px;
+}
